--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#007f00</color>
     <color name="colorPrimaryDark">#005f00</color>
-    <color name="colorAccent">#7c4dff</color>
+    <color name="colorAccent">#2962ff</color>
     <color name="transparent">#00000000</color>
     <color name="black">#000000</color>
 </resources>
